# testnet

./: .gitignore  Aegis_TechSpec.docx  COMMANDS.md  Cargo.toml  LICENSE  OOM_DIAGNOSIS.md  PoSy_TechSpec.docx  README.md  SXCP_TechSpec.docx  SynQ_TechSpec.docx  TESTNET_COMMANDS.md  api.synergy-network.io  fix-nginx-permissions.sh  install-api-router.sh  install-testbeta-service.sh  install-testnet-service.sh  monitor-blocks.sh  network-identifiers.testnet.json  package-lock.json  package.json  reset-testbeta.sh  rpc-methods-todo.docx  rpc-methods-todo.md  rpc-methods.docx  rpc-methods.md  synergy-testbeta-bootnode.service  testbeta.sh  testnet-allocation-manifest.json  testnet-public-validator-manifest.json  testnet.sh
SynQ/: README.md  (+3 more)
SynQ/cli/: Cargo.toml
SynQ/cli/src/: main.rs
SynQ/cli/tests/: integration_test.rs
SynQ/compiler/: Cargo.toml
SynQ/compiler/src/: ast.rs  codegen.rs  lib.rs  parser.rs  pqc_integration.rs  synq.pest
SynQ/compiler/tests/: integration_test.rs
SynQ/vm/: Cargo.toml  README.md
SynQ/vm/src/: assembler.rs  lib.rs  opcode.rs  vm.rs
SynQ/vm/tests/: integration_test.rs
aegis-pqvm/: Cargo.toml  LICENSE  PQVM_USAGE_MANUAL.md  README.md  SECURITY.md  build.rs  package-lock.json
aegis-pqvm/.github/workflows/: fuzz-ci.yml  kat-cross-platform.yml  module-security-baseline.yml  release-provenance.yml
aegis-pqvm/archive/legacy_algorithms/classicmceliece/: Cargo.toml  build.rs
aegis-pqvm/archive/legacy_algorithms/hqc/: Cargo.toml  build.rs
aegis-pqvm/archive/legacy_algorithms/sphincsplus/: Cargo.toml  README.md  build.rs
aegis-pqvm/docs/benchmark/: PQVM_COMPARATIVE_BENCHMARK_REPORT.md  pqvm_benchmarks.csv  pqvm_benchmarks.json
aegis-pqvm/docs/compliance/: ACVP_HARNESS.md  CMVP_BOUNDARY_AND_SELFTEST.md
aegis-pqvm/docs/developer/: DEVELOPER_GUIDE.md
aegis-pqvm/docs/manual/: USER_MANUAL.md
aegis-pqvm/docs/release/: LICENSE_READY_PACKAGE_BUNDLE.md  PROVENANCE_AND_SIGNING.md  RELEASE_POLICY.md
aegis-pqvm/docs/security/: INDEPENDENT_SECURITY_SIGNOFF.md  SECURITY_CASE_BUNDLE.md  SIDE_CHANNEL_REVIEW.md  THREAT_MODEL.md  TRACEABILITY_MATRIX.md
aegis-pqvm/docs/specification/: TECHNICAL_SPECIFICATION.md
aegis-pqvm/examples/: evm_precompile_example.rs  key_lifecycle_example.rs  substrate_pallet_example.rs
aegis-pqvm/fuzz/: .gitignore  Cargo.toml
aegis-pqvm/fuzz/fuzz_targets/: abi_decode.rs  dispatch_deterministic.rs
aegis-pqvm/klc-rb/: BUILD-SUMMARY.md  Cargo.toml  README-WASM.md  README.md  build-wasm.sh  package.json
aegis-pqvm/klc-rb/src/: hash.rs  key_lifecycle_manager.rs  key_lifecycle_manager_wasm.rs  lib.rs  quantum_randomness_beacon.rs  utils.rs
aegis-pqvm/klc-rb/src/algorithms/: mod.rs
aegis-pqvm/pqcore/: .clang-tidy
aegis-pqvm/pqcore/common/keccak2x/: fips202x2.h
aegis-pqvm/pqcore/crypto_kem/ml-kem-1024/: META.yml
aegis-pqvm/pqcore/crypto_kem/ml-kem-512/: META.yml
aegis-pqvm/pqcore/crypto_kem/ml-kem-768/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-sha2-128f-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-sha2-128s-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-sha2-192f-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-sha2-192s-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-sha2-256f-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-sha2-256s-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-shake-128f-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-shake-128s-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-shake-192f-simple/: META.yml
aegis-pqvm/pqcore/crypto_sign/sphincs-shake-192s-simple/: META.yml
aegis-pqvm/pqcore/test/: helpers.py  pqcore.py  test_char.py  test_duplicate_consistency.py  test_preprocessor.py
aegis-pqvm/scripts/: check_effective_pqc_source_markers.sh  check_independent_security_signoff.sh  check_naming_policy.sh  check_no_absolute_paths.sh  check_no_ignored_kat.sh  check_traceability_matrix.sh  generate_release_manifest.sh  generate_sbom.sh  package_customer_bundle.sh  run_benchmark_report.sh  run_deterministic_kat.sh  run_fuzz_fault_campaign.sh  run_quality_gates.sh  run_side_channel_review.sh
aegis-pqvm/src/: key_lifecycle.rs  lib.rs  quantum_randomness_beacon.rs  traits.rs  utils.rs
aegis-pqvm/src/integrations/: abi.rs  mod.rs
aegis-pqvm/src/integrations/bitcoin/: mod.rs
aegis-pqvm/src/security/: mod.rs
aegis-pqvm/tests/: fault_injection_campaign.rs  integrations_dispatch.rs  kat_fndsa.rs  kat_mldsa_aegis.rs  kat_mlkem.rs  quantum_randomness_beacon.rs  security_smoke.rs  side_channel_review.rs  vm_validation.rs
aegis-pqvm/tests/common/: mod.rs
src/: Cargo.toml  address.rs  aegis_tx_tool.rs  archive_validator.rs  block.rs  broadcast.rs  cluster.rs  contracts.rs  dag.rs  dag_mempool.rs  execution.rs  genesis.rs  lib.rs  logging.rs  main.rs  recovery.rs  rewards.rs  role_profiles.rs  role_runtime.rs  synergy_types.rs  synid.rs  synq_admission.rs  telemetry.rs  token.rs  token_new.rs  token_old.rs  transaction.rs  utils.rs  validator.rs  validator_lifecycle.rs  wallet.rs
src/aivm/: chat_interface.rs  distributed_ai.rs  interoperability.rs  mod.rs  model_registry.rs  provider.rs  runtime.rs  verifier.rs  wasm_vm.rs
src/config/: mod.rs
src/consensus/: anti_divergence.rs  cartel_detection.rs  chain_durability.rs  consensus_algorithm.rs  dao_governance.rs  diagnostics.rs  dual_quorum.rs  legacy_canonical_lock.rs  mod.rs  posy.rs  self_realign.rs  synergy_score.rs  tests.rs  timing_trace.rs  validator_keys.rs  vrf.rs
src/crypto/: aegis_pqvm.rs  mod.rs  pqc.rs
src/data/: chain.json  consensus_vote_locks.json
src/gas/: mod.rs
src/node/: mod.rs  synergyd.rs
src/p2p/: identity.rs  messages.rs  mod.rs  networking.rs
src/rpc/: mod.rs  rpc_server.rs  rpc_server.rs.bak
src/sxcp/: mod.rs
src/sync/: fast_sync.rs  full_sync.rs  manager.rs  mod.rs  state_sync.rs  validation.rs
src/synergy-address-engine/: Cargo.toml  devnet_generator.rs  readme_doc.md
src/synergy-address-engine/src/: main.rs
src/synq/: compiler.rs  interpreter.rs  mod.rs
src/tests/: testnet_genesis_artifacts.rs
(+753 files in other folders)
