[workspace]
members = [
    "src"
]
exclude = [
    "control-panel/src-tauri",
    "src/synergy-address-engine"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
rocksdb = "0.23.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"
hex = "0.4.3"
sha3 = "0.10"
lazy_static = "1.4"

# Post-Quantum Cryptography
pqcrypto = "0.18"
pqcrypto-traits = "0.3"
pqcrypto-mlkem = "0.1.1"

# Random number generation for fallback keypair generation
rand = "0.8"

# Aegis PQVM (when available)
# aegis-pqvm-precompiles = { path = "./node_modules/aegis-pqvm/evm/precompiles" }
# aegis-pqvm-pallet = { path = "./node_modules/aegis-pqvm/substrate/pallet" }

# WebAssembly VM
wasmtime = "18.0.0"

[patch.crates-io]
pqcrypto-internals = { path = "vendor/aegis-pqvm/vendor/pqcrypto-internals" }
pqcrypto-traits = { path = "vendor/aegis-pqvm/vendor/pqcrypto-traits" }
