[package]
name = "synq-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
synq-compiler = { path = "../compiler" }
synq-vm = { path = "../vm" }
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
