[package]
name = "synq-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Parser dependencies
pest = "2.7.7"
pest_derive = "2.7.7"

# SynQ VM dependency
synq-vm = { path = "../vm" }

# PQC dependencies
pqcrypto = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
