[package]
name = "aegis-pqvm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.aegis-pqvm]
path = ".."

[[bin]]
name = "abi_decode"
path = "fuzz_targets/abi_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dispatch_deterministic"
path = "fuzz_targets/dispatch_deterministic.rs"
test = false
doc = false
bench = false
